add css elements for new project site

--- a/web/Home.html
+++ b/web/Home.html
@@ -85,10 +85,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 Content
             </h2>
             <article>
-                <h3>By clicking on the buttons below you will get to project view, project details and new project <br>
+                By clicking on the buttons below you will get to project view, project details and new project <br>
                     The home page is designed to introduce you to the power of Kong. Kong means "nothing" or "emptyness". <br>
                     We use this concept to create a calm and peaceful state of mind.
-                </h3>
+               
             </article>
             <video width="640" height="480" controls muted autoplay loop>
                 <source src="MOV_0030.mp4" type="video/mp4">
