Javascript scripts for HTML websites

--- a/web/NewRegister.html
+++ b/web/NewRegister.html
@@ -9,6 +9,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="manifest" href="\manifest.json">
+        <script src="Project.js" type="module" ></script>
+        <script src="ExternScript.js" type="module"></script>
+        <script src="Language.js"></script>
         
     </head>
     <body>
