--- a/web/Projectdetail.html
+++ b/web/Projectdetail.html
@@ -11,6 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="keywords" content="Project, Management, Planner">
         <meta name="author" content="Lisa and Lena">
         <link rel="manifest" href="\manifest.json">
+        <script src="Projectdetail.js"></script>
 
     </head>
     <body>
