--- a/web/Home.html
+++ b/web/Home.html
@@ -12,8 +12,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="author" content="Lisa and Lena">
         <link rel="manifest" href="\manifest.json">
         <script src="Project.js" type="module" ></script>
-        <script src="ExternScript.js" type="module"></script>
+        <!-- <script src="ExternScript.js" type="module"></script> -->
         <script src="Language.js"></script>
+        <script src="FetchAPIGet.js" type="module"></script>
+        <script src="FetchAPIPost.js" type="module"></script>
+        <script src="FetchAPIPut.js" type="module"></script>
+        
+<!--        <script type="module">
+            import{getTaskById} from './FetchAPIGet.js';
+            window.getTaskById = getTaskByIs;
+        </script>-->
 
     </head>
     <body>
